# haskell-exam

./: exam.cabal  stack.yaml
app/: Main.hs
src/: Dao.hs  Lib.hs  Model.hs
