name:                exam
version:             0.1.0.0
homepage:            https://github.com/alexchekmenev/haskell-exam
license:             BSD3
license-file:        LICENSE
author:              Alexander Chekmenev
maintainer:          alexchekmenev@gmail.com
copyright:           2017 Alexander Chekmenev
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable exam-exe
  hs-source-dirs:      app, src
  main-is:             Main.hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wall
  build-depends:       base
                     , exam
                     , mtl
                     , transformers
                     , exceptions
                     , safecopy
                     , acid-state
                     , containers
                     , time
                     , scotty
                     , wai
                     , wai-extra
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alexchekmenev/haskell-exam
